# abcd

./: .gitignore
backend/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  schema.sql  setup_ecr.sh  setup_lambda.sh  t.md  t.py  update_code.sh  update_env.sh
backend/app/: __init__.py  api.py  gpt.py  main.py
backend/app/data/: lesson1.md
frontend/: README.md  components.json  package-lock.json  package.json  tsconfig.json  update-frontend.sh
frontend/src/components/app/: data.ts  index.tsx  schema.ts
frontend/src/data/: challenges.ts  docs.ts  lessons.ts
frontend/src/layouts/: Layout.astro
frontend/src/pages/: index.astro
